--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,22 +3,22 @@
 @tailwind utilities;
 
 @layer components {
-    .h1 {
+    h1 {
         @apply text-4xl font-bold;
     }
-    .h2 {
+    h2 {
         @apply text-3xl font-bold;
     }
-    .h3 {
+    h3 {
         @apply text-2xl font-bold;
     }
-    .h4 {
+    h4 {
         @apply text-lg font-bold;
     }
-    .h5 {
+    h5 {
         @apply text-sm font-bold;
     }
-    .h6 {
+    h6 {
         @apply text-xs font-bold;
     }
 }
